# win-caffeine

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  win-caffeine.bat  win-caffeine.py  win-caffeine.vbs
src/: screen_lock.py  win_caffeine.py
src/win_caffeine/: cli.py  const.py  custom_widgets.py  gui.py  main_window.py  qt.py  qworker.py  screen_lock.py  settings.py  theme.py  utils.py  worker.py
tests/: test_win_caffeine.py
