[metadata]
name = win_caffeine
description = Python starter package
version = 0.0.1
author = Stanislav Sabev
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.9
    Programming Language :: Python :: 3 :: 3.10
    Programming Language :: Python :: 3 :: 3.11

[options]
packages =
    win_caffeine
install_requires = 
    PySide2 >= 5.15.0
    
python_requires = >=3.9.10
package_dir =
    =src
zip_safe = False

[options.extras_require]
testing = 
    pytest>=6.0.2
    pytest-cov>=3.0.0
    mock>=4.0.3
    black>=23.3.0
    mypy>=0.910
    flake8>=4.0.0
    tox>=3.21.4

[options.package_data]
win_caffeine = py.typed

[flake8]
exclude =
    __pycache__,
    venv,
max-line-length = 99
count = true
max-complexity = 10