[metadata]
name = win_caffeine
description = Python starter package
version = 0.0.1
author = Stanislav Sabev
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.10
    Programming Language :: Python :: 3 :: 3.11

[options]
packages =
    win_caffeine
install_requires = 
    PySide2 == 5.15.2.1
    pyqtdarktheme == 2.1.0    
python_requires = >=3.10.11
package_dir =
    =src
zip_safe = False

[options.extras_require]
testing = 
    pytest>=7.3.0
    pytest-cov>=4.1.0
    mock>=5.0.0
    black>=23.3.0
    mypy>=1.2.0
    flake8>=6.0.0
    tox>=4.4.10

[options.package_data]
win_caffeine = py.typed

[flake8]
exclude =
    __pycache__,
    .venv,
max-line-length = 99
count = true
max-complexity = 10